--- a/report/acknowledge.tex
+++ b/report/acknowledge.tex
@@ -1,3 +1,1 @@
-I'd like to thank my supervisors, Dr. Mehmet Dogar and Dr. Matteo Leonetti, for their constant support and thoughts throughout this project. I'd like to thank Dr. Matteo Leonetti again, for supporting me throughout the entirity of my undergraduate degree, and for providing me with many opportunities to develop autonomous service robotics applications and take part in robotics competitions.
-\\I'm grateful for the feedback from my assessor, Dr. Sebastian Ordyniak.
-\\I'd like to thank my parents, for everything.
+I'd like to thank my supervisors, Dr. Mehmet Dogar and Dr. Matteo Leonetti, for their constant support and insight throughout this project; I learned so much during our conversations. I'd like to thank Dr. Mehmet Dogar for supervising this project, when he was not due to have any project students this year. I'd like to thank Dr. Matteo Leonetti once more, for supporting and mentoring me throughout almost my entire undergraduate degree, and providing me with many opportunities to program service robots, where I found my passion and research interest. I'd like to thank my assessor, Dr. Sebastian Ordyniak for his valuable intermediate feedback. I'd like to thank my girlfriend, for supporting me throughout my undergraduate degree, and listening to my ideas. I'd like to thank my parents and family for everything; I wouldn't be where I am today without them.
