--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -17,12 +17,15 @@
 %  \acro{POMDP}{Partially Observable Markovian Decision Process}
 % \end{acronym}
 
-\include{./report/chapters/chapter1}
-\include{./report/chapters/chapter2}
-\include{./report/chapters/chapter3}
-\include{./report/chapters/chapter4}
-\include{./report/chapters/chapter5}
-% \include{./report/chapters/chapter6}
+
+\include{report/chapters/chapter1_}
+\include{report/chapters/chapter2_}
+% \include{./report/chapters/chapter1}
+% \include{./report/chapters/chapter2}
+\include{./report/chapters/chapter3_}
+\include{./report/chapters/chapter4_}
+\include{./report/chapters/chapter5_}
+% \include{./report/chapters/chapter6_}
 
 % Adds references to the table of contents.
 \addcontentsline{toc}{chapter}{References}
