--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1294,11 +1294,6 @@ location = {St. Paul, MN, USA},
 series = {AAMAS '13}
 }
 
-  
-
-
-
-
 @InProceedings{pmlr-v120-seyde20a,
   title = 	 {Learning to Plan via Deep Optimistic Value Exploration},
   author =       {Seyde, Tim and Schwarting, Wilko and Karaman, Sertac and Rus, Daniela},
@@ -1577,13 +1572,13 @@ numpages = {32}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@misc{hu2023planning,
-      title={Planning Goals for Exploration}, 
-      author={Edward S. Hu and Richard Chang and Oleh Rybkin and Dinesh Jayaraman},
-      year={2023},
-      eprint={2303.13002},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
+@inproceedings{
+  hu2023planning,
+  title={Planning Goals for Exploration},
+  author={Edward S. Hu and Richard Chang and Oleh Rybkin and Dinesh Jayaraman},
+  booktitle={The Eleventh International Conference on Learning Representations },
+  year={2023},
+  url={https://openreview.net/forum?id=6qeBuZSo7Pr}
 }
 
 @article{goexplore,
@@ -1595,4 +1590,186 @@ title = {First return, then explore},
 volume = {590},
 journal = {Nature},
 doi = {10.1038/s41586-020-03157-9}
+}
+
+@inproceedings{NIPS2010_edfbe1af,
+ author = {Silver, David and Veness, Joel},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {J. Lafferty and C. Williams and J. Shawe-Taylor and R. Zemel and A. Culotta},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Monte-Carlo Planning in Large POMDPs},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2010/file/edfbe1afcf9246bb0d40eb4d8027d90f-Paper.pdf},
+ volume = {23},
+ year = {2010}
+}
+
+@INPROCEEDINGS{4670492,
+
+  author={Grzes, Marek and Kudenko, Daniel},
+
+  booktitle={2008 4th International IEEE Conference Intelligent Systems}, 
+
+  title={Plan-based reward shaping for reinforcement learning}, 
+
+  year={2008},
+
+  volume={2},
+
+  number={},
+
+  pages={10-22-10-29},
+
+  doi={10.1109/IS.2008.4670492}}
+
+
+@inproceedings{10.1145/1143844.1143845,
+author = {Abbeel, Pieter and Quigley, Morgan and Ng, Andrew Y.},
+title = {Using Inaccurate Models in Reinforcement Learning},
+year = {2006},
+isbn = {1595933832},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1143844.1143845},
+doi = {10.1145/1143844.1143845},
+abstract = {In the model-based policy search approach to reinforcement learning (RL), policies are found using a model (or "simulator") of the Markov decision process. However, for high-dimensional continuous-state tasks, it can be extremely difficult to build an accurate model, and thus often the algorithm returns a policy that works in simulation but not in real-life. The other extreme, model-free RL, tends to require infeasibly large numbers of real-life trials. In this paper, we present a hybrid algorithm that requires only an approximate model, and only a small number of real-life trials. The key idea is to successively "ground" the policy evaluations using real-life trials, but to rely on the approximate model to suggest local changes. Our theoretical results show that this algorithm achieves near-optimal performance in the real system, even when the model is only approximate. Empirical results also demonstrate that---when given only a crude model and a small number of real-life trials---our algorithm can obtain near-optimal performance in the real system.},
+booktitle = {Proceedings of the 23rd International Conference on Machine Learning},
+pages = {1–8},
+numpages = {8},
+location = {Pittsburgh, Pennsylvania, USA},
+series = {ICML '06}
+}
+
+@book{EdelkampSchroedl11,
+  abstract = {Search has been vital to artificial intelligence from the very beginning as a core technique in problem solving. The authors present a thorough overview of heuristic search with a balance of discussion between theoretical analysis and efficient implementation and application to real-world problems. Current developments in search such as pattern databases and search with efficient use of external memory and parallel processing units on main boards and graphics cards are detailed. Heuristic search as a problem solving tool is demonstrated in applications for puzzle solving, game playing, constraint satisfaction and machine learning. While no previous familiarity with heuristic search is necessary the reader should have a basic knowledge of algorithms, data structures, and calculus. Real-world case studies and chapter ending exercises help to create a full and realized picture of how search fits into the world of artificial intelligence and the one around us. This title provides real-world success stories and case studies for heuristic search algorithms. It includes many AI developments not yet covered in textbooks such as pattern databases, symbolic search, and parallel processing units.},
+  added-at = {2016-11-04T19:12:49.000+0100},
+  address = {Amsterdam},
+  author = {Edelkamp, Stefan and Schr\"{o}dl, Stefan},
+  biburl = {https://www.bibsonomy.org/bibtex/252346b00d0ee59e5b63270b0cd94f838/flint63},
+  file = {ACM Learning Center eBook:2011/EdelkampSchroedl11.pdf:PDF;Amazon Search inside:http\://www.amazon.de/gp/reader/0123725127/:URL},
+  groups = {public},
+  interhash = {e878393e8f279225523f0aaabfc5fe8a},
+  intrahash = {52346b00d0ee59e5b63270b0cd94f838},
+  isbn = {978-0-12-372512-7},
+  keywords = {01624 103 book acm elsevier ai search algorithm theory},
+  publisher = {Morgan Kaufmann},
+  timestamp = {2017-07-13T18:19:20.000+0200},
+  title = {Heuristic Search: Theory and Applications},
+  url = {http://www.sciencedirect.com/science/book/9780123725127},
+  username = {flint63},
+  year = 2011
+}
+
+
+
+@inproceedings{NIPS2006_c1b70d96,
+ author = {Auer, Peter and Ortner, Ronald},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {B. Sch\"{o}lkopf and J. Platt and T. Hoffman},
+ pages = {},
+ publisher = {MIT Press},
+ title = {Logarithmic Online Regret Bounds for Undiscounted Reinforcement Learning},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2006/file/c1b70d965ca504aa751ddb62ad69c63f-Paper.pdf},
+ volume = {19},
+ year = {2006}
+}
+
+@PhdThesis{wiering,
+author = {Wiering, Marco},
+year = {1999},
+title = {Explorations in Efficient Reinforcement Learning}
+}
+
+@article{DBLP:journals/corr/Cesa-BianchiGLN17,
+  author       = {Nicol{\`{o}} Cesa{-}Bianchi and
+                  Claudio Gentile and
+                  G{\'{a}}bor Lugosi and
+                  Gergely Neu},
+  title        = {Boltzmann Exploration Done Right},
+  journal      = {CoRR},
+  volume       = {abs/1705.10257},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1705.10257},
+  eprinttype    = {arXiv},
+  eprint       = {1705.10257},
+  timestamp    = {Mon, 13 Aug 2018 16:46:54 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/Cesa-BianchiGLN17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{singh00,
+author = {Singh, Satinder and Jaakkola, Tommi and Littman, Michael and Szepesvári, Csaba},
+year = {2000},
+month = {03},
+pages = {287-308},
+title = {Convergence Results for Single-Step On-Policy Reinforcement-Learning Algorithms},
+volume = {38},
+journal = {Machine Learning},
+doi = {10.1023/A:1007678930559}
+}
+
+@article{DBLP:journals/corr/abs-1901-10995,
+  author       = {Adrien Ecoffet and
+                  Joost Huizinga and
+                  Joel Lehman and
+                  Kenneth O. Stanley and
+                  Jeff Clune},
+  title        = {Go-Explore: a New Approach for Hard-Exploration Problems},
+  journal      = {CoRR},
+  volume       = {abs/1901.10995},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1901.10995},
+  eprinttype    = {arXiv},
+  eprint       = {1901.10995},
+  timestamp    = {Sun, 03 Feb 2019 14:23:05 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1901-10995.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{bcs,
+	author={{British Computer Society}},
+	title={Code of conduct for BCS members},
+	year={2022}
+}
+
+@inproceedings{210504682,
+  author =		 "Lutter, M. and  Mannor, S. and  Peters, J. and  Fox, D. and  Garg, A.",
+  year =		 "2021",
+  title =		 "Value Iteration in Continuous Actions, States and Time",
+  booktitle =		 "International Conference on Machine Learning (ICML)",
+  URL =			 "https://arxiv.org/pdf/2105.04682.pdf",
+  crossref =		 "p11429"
+}
+
+@InProceedings{10.1007/978-3-642-25566-3_32,
+author="Cou{\"e}toux, Adrien
+and Hoock, Jean-Baptiste
+and Sokolovska, Nataliya
+and Teytaud, Olivier
+and Bonnard, Nicolas",
+editor="Coello, Carlos A. Coello",
+title="Continuous Upper Confidence Trees",
+booktitle="Learning and Intelligent Optimization",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="433--445",
+abstract="Upper Confidence Trees are a very efficient tool for solving Markov Decision Processes; originating in difficult games like the game of Go, it is in particular surprisingly efficient in high dimensional problems. It is known that it can be adapted to continuous domains in some cases (in particular continuous action spaces). We here present an extension of Upper Confidence Trees to continuous stochastic problems. We (i) show a deceptive problem on which the classical Upper Confidence Tree approach does not work, even with arbitrarily large computational power and with progressive widening (ii) propose an improvement, termed double-progressive widening, which takes care of the compromise between variance (we want infinitely many simulations for each action/state) and bias (we want sufficiently many nodes to avoid a bias by the first nodes) and which extends the classical progressive widening (iii) discuss its consistency and show experimentally that it performs well on the deceptive problem and on experimental benchmarks. We guess that the double-progressive widening trick can be used for other algorithms as well, as a general tool for ensuring a good bias/variance compromise in search algorithms.",
+isbn="978-3-642-25566-3"
+}
+
+@article{DBLP:journals/corr/abs-1709-06196,
+  author       = {Zachary Sunberg and
+                  Mykel J. Kochenderfer},
+  title        = {{POMCPOW:} An online algorithm for POMDPs with continuous state, action,
+                  and observation spaces},
+  journal      = {CoRR},
+  volume       = {abs/1709.06196},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1709.06196},
+  eprinttype    = {arXiv},
+  eprint       = {1709.06196},
+  timestamp    = {Mon, 13 Aug 2018 16:48:26 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1709-06196.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
