--- a/report/summary.tex
+++ b/report/summary.tex
@@ -1,50 +1,3 @@
-TODO:
-\begin{itemize}
-    \item Finalise introduction. It needs shortening.
-    \item Add the simple "PRL" agent to background research;.
-    \item finish Exploration survey
-    \item Benchmarking!!!
-    \item Sample efficiency analysis, complexity analysis
-    \item ENSURE BACKGROUND EQUATIONS ARE CORRECT!!!!! Add general Bellman equation
-    \item
-Background research: Have I ...
-
-    Explained the problem clearly?
-    Identified relevant areas for investigation and discussed them in report under appropriate headings and critically?
-    Reviewed previous attempts to solve this and similar problems?
-    Justified any claims made using credible primary or secondary sources?
-
-
-Methods: Is it clear that ...
-
-    The solution exists?
-    I have produced the deliverables specified?
-    Appropriate steps or standards were taken to ensure a quality output (e.g. design documentation, comments in code)?
-    The challenges were clearly articulated?
-
-
-Results and Discussion: Is it clear that ...
-
-    Appropriate tests and evaluation were conducted and analysed to validate the quality of deliverables within the remit of the project?
-    There are objective criteria for evaluating the achievement of the project against the initial problem?
-    These criteria are justified?
-    The criteria have been used professionally to judge whether the problem has been solved?
-
-
-Presentation: Have I ...
-
-    Given the report an appropriate title?
-    Structured the report appropriately, with appendices used for peripheral content and a single references list containing only sources referred to in the report?
-    Written in a style appropriate to the computing audience?
-    Written in a consistent manner e.g., tense, use of acronyms, citation style?
-    Conformed to the requirements for page layout, font size, page limit etc. ?
-    Ensured that all material included is correctly attributed?
-
-
-Self-appraisal: Have I...
-
-    Considered how my work could be extended?
-    Included mature personal reflection which leads to lessons learnt?
-    Suggested how the problems encountered might be avoided?
-    Considered legal, social, ethical and professional issues, with justification if one or more are not relevant?
-\end{itemize}
+Efficient exploration is imperative to success in Reinforcement Learning. However, random approaches, which are not inefficient, are often favoured in practice due to their ease of implementation and robustness. Model-based approaches to exploration are typically more sample efficient, but much of the current approaches are either very optimistic or computationally expensive, and rely on learning a model entirely from scratch and assume that it will eventually become correct.
+\newline\newline Within this work we explored a model-based approach to exploration that leverages an initial model, uses a \textit{reasonable} amount of optimism, alongside intrinsic motivation, to explore and learn whilst not assuming that the model will eventually become correct. Exploration was driven by enabling the planner to hypothesise where the model may be incorrect, through additional actions denoted \textit{Meta Actions} and then realising these hypotheses through experience.
+\newline\newline Various implementations were developed based on this idea, and were evaluated in a collection of gridworld-like domains, and our method of exploration was shown to perform better than the most ubiquitous random method, $\epsilon$-greedy, in most cases; moreover, the agents with \textit{Meta Actions} available to them often outperformed those without them, showing that they can a useful exploration mechanism.
