--- a/report/prelude.tex
+++ b/report/prelude.tex
@@ -16,13 +16,9 @@
 \hline 
 Items & Format & Recipient(s) and Date \\ 
 \hline 
-Final Report & PDF file & Uploaded to Minerva (DD/MM/YY) \\ 
-\hline 
-<Example> Scanned participant consent forms & PDF file / file archive & Uploaded to Minerva (DD/MM/YY) \\ 
-\hline 
-<Example> Link to online code repository & URL & Sent to supervisor and assessor (DD/MM/YY) \\ 
-\hline 
-<Example> User manuals & PDF file & Sent to client and supervisor (DD/MM/YY) \\ 
+Final Report & PDF file & Uploaded to Minerva (01/05/2023) \\ 
+\hline
+Link to online code repository & URL & Sent to supervisor and assessor (01/05/2023) \\ 
 \hline 
 \end{tabular} 
 \end{table}
@@ -41,7 +37,7 @@ Final Report & PDF file & Uploaded to Minerva (DD/MM/YY) \\
 % Sign this with a pen for all of the hard copies before you hand
 % them over to the SSO. If for any reason the submission of final reports
 % is online-only, replace the '\rule{}{}' command with your name.
-\flushright(Signature of Student) \rule{50mm}{1pt}
+\flushright(Signature of Student) JARED WILLIAM SWIFT
 \flushleft
 
 \vfill
